--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <project name="VxBPM" basedir=".">
-	<property name="version">0.2.0</property>
+	<property name="version">0.2.1</property>
 	<property name="dir.src">src</property>
 	<property name="dir.build">out</property>
 	<property name="dir.build.production">${dir.build}/production/VxBPM</property>
@@ -36,7 +36,8 @@
 		
 		<javac classpathref="projectClasspath"
 			   srcdir="${dir.src}"
-			   destdir="${dir.build.production}" />
+			   destdir="${dir.build.production}"
+			   verbose="true"/>
 	</target>
 	
 	<target name="jar" depends="compile">
